# FoilAnalyzer

./: .gitignore  AirfoilViewer.cpp  AirfoilViewer.h  CMakeLists.txt  LICENSE  README.md
MATLAB/: 0012-aft-re500_data.mat  0012_aft_re1mil_data.mat  0012_emp_data.mat  0012_emp_data_2.mat  0012_emp_re3mil_data.mat  2412_airfoiltools_data.mat  2412_emp_data.mat  Blasius_Panel.m  Blasius_Panel_alpha.m  Blasius_Panel_force.m  Eppler387.csv  NACA 0012 Cp 8 deg.csv  NACA0012-Re50000.xlsx  Polhausen Table.xlsx  Thwaites Table.xlsx  Thwaites_Panel.m  Thwaites_cylinder.m  Thwaites_run.m  Thwaites_run_cylinder.m  generateNACA4.m  inviscidPanel.m
src/: AirfoilAnalyzer.cpp  AirfoilAnalyzer.h  AirfoilDefiner.cpp  AirfoilDefiner.h  AirfoilGenerator.cpp  AirfoilGenerator.h  AirfoilViewer.cpp  AirfoilViewer.h  Axis.cpp  Axis.h  FoilParameters.h  Main.cpp  MainMenu.cpp  MainMenu.h  OverwriteNameDialog.cpp  OverwriteNameDialog.h  Plot.cpp  Plot.h  faProgram.h
